# UNet

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  load_data.py  main.py  project.ipynb  setup.py  test.py
src/bindings/: CMakeLists.txt  main.cpp  net.cpp
src/cuda_library/: CMakeLists.txt  add.cu  addProcess.h  cuda_lib.h  cuda_manager.h  cuda_manager_lib.h  cuda_manager_ops.cu  cuda_ops.cu
src/cuda_library/2Dconvolution/: convolution.cu  convolution_numpy.h
src/cuda_library/attention/: attention.cu
src/cuda_library/batch_norm/: batch_norm.cu
src/cuda_library/max_pool/: max_pool.cu
src/cuda_library/test/: attention_test.h  batch_norm_test.h  convolution_test.h  max_pool_test.h  test.h  upsample_test.h
src/cuda_library/upsample/: upsample.cu
src/neural_net_implementation/: BN_functions.h  activation_functions.h  attention_layer_functions.h  concat_layer_functions.h  convolution_layer_functions.h  layer.h  max_pool_functions.h  neural_net.h  upsampling_layer_functions.h
test/: test_convolution.ipynb  test_convolution.py  torch_compare.py
